--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,5 +1,5 @@
 [phases.build]
-cmds = ['''GOOS=linux GOARCH=amd64 go build -ldflags='-s' -o=./bin/linux_amd64/api''']
+cmds = ['''GOOS=linux GOARCH=amd64 go build -ldflags='-s' -o=./bin/linux_amd64/api ./cmd/api''']
 
 [start]
 cmd = './bin/linux_amd64/api'
